[package]
name = "wrapsody-md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.16"
textwrap = {version = "0.16", features = ["smawk"]}
clap = {version = "4.1", features = ["derive"]}
itertools = "0.10"

[profile.release]
debug = true
